--- a/style.css
+++ b/style.css
@@ -11,11 +11,16 @@ body,html{
 
 @font-face {
     font-family: ashu;
-    src: url(./canopee.ttf);
+    src: url(./canopee.woff2);
 }
 
 
-  
+  #main{
+    width: 100%;
+    height: 100%;
+    background-image: url(./Netflix-Symbol.webp);
+    background-size: cover;
+  }
 #main h1{
     font-family: ashu;
     text-align: center;
